Update Eclipse configuration section